auth-microservice/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-srv
  namespace: application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-srv
  template:
    metadata:
      labels:
        app: auth-srv
    spec:
      containers:
      - name: auth-srv
        image: docker.io/eydarouaz/auth-srv:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "auth-secrets"
          nodePublishSecretRef:
            name: secrets-store-creds
