auth-microservice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-srv
  namespace: application
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: jwt-auth
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 80
